...
            availableTags: self.viewModel.availableTags,
            onCreateTag: { self.showingCreateTag = true }
          )
        }
      }
      .surfaceFormBackground()
      .navigationTitle("New List")
      .navigationBarTitleDisplayMode(.inline)
      .toolbar {
        ToolbarItem(placement: .cancellationAction) {
          Button("Cancel") {
            self.dismiss()
          }
...
